OS-7949: Add Support for DEBUG Events
- Added a checkbox to enable debug events, allowing them to be displayed
across all existing log levels (all, info, warning, error).
- Included event time in the titles of accordion sections for better
tracking and readability.

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -494,6 +494,7 @@
   "days": "Days",
   "daysParameterMustBeInRange": "Data calculations are supported in the range from {min} and {max} full days",
   "deactivate": "Deactivate",
+  "debug": "Debug",
   "decline": "Decline",
   "default": "Default",
   "defaultResourceOwner": "Default resource owner",
@@ -1974,6 +1975,7 @@
   "showAllResources": "Show all resources",
   "showBreakdown": "Show breakdown",
   "showChartFor": "Show chart for",
+  "showDebugEvents": "Show Debug events",
   "showDirectionsWithExpenses": "Show directions with expenses <{value}",
   "showEmpty": "Show empty",
   "showExpensesAs": "Show expenses as",
