OS-7838. Add support for manual data source billing reimport

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -206,6 +206,8 @@
   "billingImport": "Billing import",
   "billingImportFailed": "Billing import failed",
   "billingOnly": "Billing only",
+  "billingReimportTitle": "Billing Reimport",
+  "billingReimportWarning": "Reimporting billing starting from the selected import date will overwrite existing billing data. This action may cause discrepancies or breaks in the current billing records and can take some time to complete. The new billing data will be imported during the next billing import report processing. Please proceed with caution, as this process cannot be undone. Ensure that this action is necessary and that you are prepared for any potential data loss and inaccuracies in billing tracking.",
   "billingReportBucket": "Billing report bucket",
   "book": "Book",
   "bookEnvironment": "Book {environmentName}",
@@ -844,6 +846,7 @@
   "idle": "Idle",
   "ifYouNeedMoreDescription": "If you need more detailed description, check our <link>documentation</link>.",
   "imageObsoleteLastUsedHelp": "Last time an image was seen used for instance creation",
+  "importFrom": "Import from",
   "importType": "Import type",
   "in": "In",
   "inProgress": "In progress",
@@ -1699,6 +1702,7 @@
   "register": "Register",
   "registerConfirmationMessage": "You have been successfully registered.",
   "registeredAt": "Registered at",
+  "reimportExpenses": "Reimport expenses",
   "release": "Release",
   "releaseBookingInformation": "This Shared Environment will be marked as available. Notification will be sent to tenant user.",
   "releaseBookingTitle": "Release Booking",
@@ -1883,6 +1887,7 @@
   "savingsWithAverageCommitmentHelp": "Savings per month with purchase of Standard RI for 12 months with \"All Upfront\" payment option",
   "savingsWithMinimalCommitment": "Savings with minimal commitment",
   "scannedObjects": "Scanned objects",
+  "scheduleImport": "Schedule import",
   "scheduledAt": "Scheduled at {label}",
   "scope": "Scope",
   "scrollToTheTarget": "Scroll to the target",
