OS-7838. Fixes for manual data source report reimport
1. Updated the list of supported data sources.
2. Disable the button and show a tooltip when no billing information is available.
3. Constrain initialDateProp within minDateValid and maxDateValid
4. Send the start of a day in UTC

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -464,6 +464,7 @@
   "dataSizeAvg": "Data size (avg)",
   "dataSource": "Data source",
   "dataSourceId": "Data source ID",
+  "dataSourceNoBillingReportsProcessedYet": "No billing reports have been processed yet. Please check the \"Advanced\" tab for more details.",
   "dataSourceRenamingWarning": "Please note that you may see a previous data source name in historical data.",
   "dataSources": "Data sources",
   "dataSourcesBackdropMessage": "To get real data, please connect a data source.",
