OS-2873. Add support for REGION_IS and RESOURCE_TYPE_IS assignment rule conditions

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -58,7 +58,6 @@
   "addArtifactTitle": "Add Artifact",
   "addAssignmentRuleShort": "Add assignment rule",
   "addAssignmentRuleTitle": "Add Automatic Resource Assignment Rule",
-  "addAssignmentRuleToTitle": "Add Automatic Resource Assignment Rule to {poolName}",
   "addChart": "Add chart",
   "addClusterTypeTitle": "Add Cluster Type",
   "addDatasetTitle": "Add Dataset",
@@ -1698,6 +1697,7 @@
   "region.me": "Middle East",
   "region.sa": "South America",
   "region.us": "United States",
+  "regionIs": "Region is",
   "regionRelativityRating": "Region relativity rating",
   "regions": "Regions",
   "register": "Register",
@@ -1783,6 +1783,7 @@
   "resourceType.snapshot": "Snapshot",
   "resourceType.snapshotChain": "Snapshot Chain",
   "resourceType.volume": "Volume",
+  "resourceTypeIs": "Resource type is",
   "resources": "Resources",
   "resourcesChargedThisMonth": "Resources charged (this month)",
   "resourcesForTag": "Resources tagged with <strong>{tag}</strong>.",
