OS-4648. Update archived recommendations empty message and add page description

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -152,6 +152,7 @@
   "archived": "Archived",
   "archivedAt": "Archived at",
   "archivedRecommendations": "Archived Recommendations",
+  "archivedRecommendationsDescription": "Recommendations are archived when they are no longer active, either because they have been applied, the associated resource has been removed, or they have become irrelevant due to changes in resource properties.",
   "artifacts": "Artifacts",
   "assetPool": "Asset pool",
   "assign": "Assign",
@@ -1293,6 +1294,7 @@
   "noActiveRecommendationsAvailable": "No active recommendations available",
   "noAnomalyPolicies": "No anomaly policies",
   "noApplications": "No applications",
+  "noArchivedRecommendationsAvailable": "No archived recommendations available.",
   "noArtifacts": "No artifacts",
   "noAutomaticResourceAssignmentRules": "No automatic resource assignment rules",
   "noBIExports": "No Business Intelligence exports",
