Feature/notification settings
Co-authored-by: ek-hystax <33006768+ek-hystax@users.noreply.github.com>

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -46,6 +46,7 @@
   "accessKey": "Access key",
   "accessKeyId": "Access key ID",
   "accountId": "Account ID",
+  "accountManagementTitle": "Account Management",
   "acquireWebhook": "Acquire webhook",
   "action": "Action",
   "actions": "Actions",
@@ -630,6 +631,41 @@
   "email": "Email",
   "emailVerificationDescription": "To verify your email, please enter the verification code sent to:",
   "emailVerifiedSuccessfully": "Email has been verified successfully!",
+  "emailNotifications": "Email notifications",
+  "emailTemplates.accountManagement.invite.description": "Notification of an invitation to join OptScale",
+  "emailTemplates.accountManagement.invite.title": "Invitation notification",
+  "emailTemplates.finOps.alert.description": "Notification of a pool limit being reached or exceeded",
+  "emailTemplates.finOps.alert.title": "Pool limit alert",
+  "emailTemplates.finOps.pool_exceed_report.description": "Alert for exceeding the limits of a specific resource pool",
+  "emailTemplates.finOps.pool_exceed_report.title": "Pool limit exceed alert",
+  "emailTemplates.finOps.pool_exceed_resources_report.description": "Notification that resource pools have exceeded or are forecasted to exceed their defined limits",
+  "emailTemplates.finOps.pool_exceed_resources_report.title": "Pool limit exceed alert",
+  "emailTemplates.finOps.saving_spike.description": "Alert about new saving opportunities",
+  "emailTemplates.finOps.saving_spike.title": "Saving spike",
+  "emailTemplates.finOps.weekly_expense_report.description": "A summary of weekly expenses",
+  "emailTemplates.finOps.weekly_expense_report.title": "Weekly expense report",
+  "emailTemplates.policy.anomaly_detection_alert.description": "Alert for detecting unusual activity or anomalies",
+  "emailTemplates.policy.anomaly_detection_alert.title": "Anomaly detection",
+  "emailTemplates.policy.organization_policy_expiring_budget.description": "Notification of a violation related to an expiring budget policy",
+  "emailTemplates.policy.organization_policy_expiring_budget.title": "Expiring budget policy violation",
+  "emailTemplates.policy.organization_policy_quota.description": "Notification of a violation related to a quota policy",
+  "emailTemplates.policy.organization_policy_quota.title": "Quota policy violation",
+  "emailTemplates.policy.organization_policy_recurring_budget.description": "Notification of a violation related to a recurring budget policy",
+  "emailTemplates.policy.organization_policy_recurring_budget.title": "Recurring budget policy violation",
+  "emailTemplates.policy.organization_policy_tagging.description": "Notification of a violation related to a tagging policy",
+  "emailTemplates.policy.organization_policy_tagging.title": "Tagging policy violation",
+  "emailTemplates.policy.pool_owner_violation_report.description": "Report regarding resource constraint violations within your managed pool",
+  "emailTemplates.policy.pool_owner_violation_report.title": "Resource constraints report",
+  "emailTemplates.policy.resource_owner_violation_alert.description": "Alert for detecting new constraint violations",
+  "emailTemplates.policy.resource_owner_violation_alert.title": "Resource constraint violation alert",
+  "emailTemplates.policy.resource_owner_violation_report.description": "Notification of resource constraint violations within your managed pool",
+  "emailTemplates.policy.resource_owner_violation_report.title": "Resource constraints report",
+  "emailTemplates.recommendations.new_security_recommendation.description": "Alert regarding a newly detected security recommendation",
+  "emailTemplates.recommendations.new_security_recommendation.title": "New security recommendation detection",
+  "emailTemplates.systemNotifications.environment_changes.description": "Notification of changes made in a Shared Environment",
+  "emailTemplates.systemNotifications.environment_changes.title": "Environment changed",
+  "emailTemplates.systemNotifications.report_imports_passed_for_org.description": "Confirmation that initial expense processing for your organization is complete",
+  "emailTemplates.systemNotifications.report_imports_passed_for_org.title": "Expenses initial processing completed",
   "employee": "Employee",
   "enabled": "Enabled",
   "endDate": "End date",
@@ -1303,6 +1339,7 @@
   "noArchivedRecommendationsAvailable": "No archived recommendations available.",
   "noArtifacts": "No artifacts",
   "noAutomaticResourceAssignmentRules": "No automatic resource assignment rules",
+  "noAvailableEmailNotifications": "No available email notifications",
   "noBIExports": "No Business Intelligence exports",
   "noBuckets": "No buckets",
   "noChildDataSourcesDiscovered": "No child data sources have been discovered",
@@ -1554,6 +1591,7 @@
   "pleaseUseTheFollowingEnvCollectorUrl": "Please use the following ENV_COLLECTOR_URL in your automation to set properties of this Shared Environment:",
   "pluralHoursValue": "{value, plural,\n  =0 {hours}\n  =1 { hour}\n other { hours}\n}",
   "policies": "Policies",
+  "policyAlertsTitle": "Policy Alerts",
   "policyName": "Policy name",
   "policyType": "Policy type",
   "policyViolations": "Policy violations",
@@ -2098,6 +2136,7 @@
   "survey": "Survey",
   "syncTooltips": "Sync tooltips",
   "system": "System",
+  "systemNotificationsTitle": "System Notifications",
   "tSystems": "T-Systems",
   "table": "Table",
   "tag": "Tag",
