OS-8046. Add the GCP service to the "Public S3 buckets" recommendation

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -629,8 +629,6 @@
   "edit{}": "Edit {value}",
   "eitherMinOrMaxMustBeDefined": "Either minimimum or maximum must be defined",
   "email": "Email",
-  "emailVerificationDescription": "To verify your email, please enter the verification code sent to:",
-  "emailVerifiedSuccessfully": "Email has been verified successfully!",
   "emailNotifications": "Email notifications",
   "emailTemplates.accountManagement.invite.description": "Notification of an invitation to join OptScale",
   "emailTemplates.accountManagement.invite.title": "Invitation notification",
@@ -666,6 +664,8 @@
   "emailTemplates.systemNotifications.environment_changes.title": "Environment changed",
   "emailTemplates.systemNotifications.report_imports_passed_for_org.description": "Confirmation that initial expense processing for your organization is complete",
   "emailTemplates.systemNotifications.report_imports_passed_for_org.title": "Expenses initial processing completed",
+  "emailVerificationDescription": "To verify your email, please enter the verification code sent to:",
+  "emailVerifiedSuccessfully": "Email has been verified successfully!",
   "employee": "Employee",
   "enabled": "Enabled",
   "endDate": "End date",
@@ -1983,6 +1983,7 @@
   "serverError": "Server error",
   "service": "Service",
   "serviceAccountId": "Service account ID",
+  "services.cloudStorage": "Cloud Storage",
   "services.compute": "Compute",
   "services.computeEngine": "Compute Engine",
   "services.ebs": "EBS",
