OS-3669. Update booking labels
1. Add the "Until" label for current bookings to indicate the end time. 
2. Replace the infinite symbol (∞) with the "Infinite" label for better readability.
3. Remove the "Duration" field for infinite upcoming bookings, as it is redundant.

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -903,6 +903,7 @@
   "incorrectDateFormat": "Incorrect date format",
   "independentCompute": "Independent compute",
   "independentComputeTooltip": "Region is recommended for running new workloads that are mostly independent from the existing ones",
+  "infinite": "Infinite",
   "infinity": "Infinity",
   "info": "Info",
   "infrastructure": "Infrastructure",
