OS-8054. [UI] Add support for gcp_tenant

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -399,6 +399,8 @@
   "createDatabricksDocumentationReference": "Please provide programmatic credentials for a service principal with an account admin role. <link>Read this guide</link> for more details.",
   "createEnvironmentsBackdropMessage": "Please add an Shared Environment to track its usage for testing and development purposes.",
   "createGCPDocumentationReference": "Please provide a service account credentials JSON file with a ReadOnlyAccess permission attached. <link>Read this guide</link> for more details.",
+  "createGCPTenantDocumentationReference1": "Google Cloud tenant is a logical construct used to manage multiple cloud accounts and projects under a shared service account within Google Cloud Platform. Configuring a tenant requires assigning appropriate roles and permissions to the service account (e.g., sa1-service@…) across projects, enabling access to resources such as billing datasets and project-specific data. This setup facilitates the automatic detection of project_ids and integration with GCP data sources, ensuring consistent access control across projects.",
+  "createGCPTenantDocumentationReference2": "Please provide a service account credentials JSON file with a ReadOnlyAccess permission attached. <link>Read this guide</link> for more details.",
   "createKubernetesDocumentationReference1": "To get cost management and FinOps capabilities for your Kubernetes cluster, you need to deploy a piece of software that collects information about running pods and converts them into cost metrics. Refer to <link>this guide</link> for more details.",
   "createKubernetesDocumentationReference2": "The software is open-source, free of malware, and requires read-only access to Kubernetes metadata and performance metrics.",
   "createKubernetesDocumentationReference3": "Please review the code and find a detailed description at {kubernetesConnectGuide}.",
@@ -584,6 +586,7 @@
   "disconnectAlibabaQuestion": "Are you sure you want to disconnect this Alibaba data source?",
   "disconnectAzureQuestion": "Are you sure you want to disconnect this Azure data source?",
   "disconnectCalendar": "Disconnect calendar",
+  "disconnectDatabricksQuestion": "Are you sure you want to disconnect this Databricks data source?",
   "disconnectGcpQuestion": "Are you sure you want to disconnect this GCP data source?",
   "disconnectGoogleCalendarMessage": "OptScale will drop the connection with the calendar {link}. Shared Environments bookings will no longer be in sync with the calendar.",
   "disconnectGoogleCalendarTitle": "Disconnect Google Calendar",
@@ -809,6 +812,7 @@
   "fullName": "Full name",
   "garbageCollector": "Garbage Collector",
   "gcp": "Google Cloud",
+  "gcpTenant": "Google Cloud tenant",
   "general": "General",
   "generateLink": "Generate public link",
   "generateReport": "Generate report",
