OS-2765. Add support for the "Default resource owner" field in the "Add Pool" form

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -417,6 +417,7 @@
   "createNewOrganizationTitle": "Create New Organization",
   "createOrganization": "Create organization",
   "createOrganizationOptionTitle": "Create Organization Option",
+  "createPoolDefaultOwnerHelp": "During creation, only organization managers can be assigned as the default owner. You can change the owner later if the user has the necessary permissions.",
   "createPoolPolicyFormDescription": "To create a new pool policy, select the pool, select the available policy type, and set the desired limit.",
   "createPoolPolicyTitle": "Create Pool Policy",
   "createPowerScheduleTitle": "Create Power Schedule",
@@ -2428,6 +2429,7 @@
   "xlsxFile": "XLSX spreadsheet",
   "yes": "Yes",
   "yesterday": "Yesterday",
+  "you": "You",
   "youAreAboutToRemoveDefaultSsh": "You are about to remove default SSH key.",
   "youAreOnlyOrganizationManager": "You are the only organization manager. Please <link>invite</link> another organization manager before self-deletion.",
   "youDoNotHaveEnoughPermissions": "You do not have enough permissions.",
