OS-4346. Update translation keys for Expenses Breakdown table widget
1. Update "No data" translations
2. Use lowercase for the word "owner"

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -1364,6 +1364,7 @@
   "noData": "No data",
   "noDataIsAvailableForThePeriod": "No data is available for the selected period",
   "noDataIsAvailableWithinTheSelectedBrushRange": "No data is available within the selected range.{br}Please adjust the time frame or try selecting a different range.",
+  "noDataSourceExpenses": "No data source expenses",
   "noDataSources": "No data sources",
   "noDataSourcesWithLink": "No data sources. Please <connectCloudLink>connect a data source</connectCloudLink>.",
   "noDataToDisplay": "No data to display",
@@ -1422,11 +1423,13 @@
   "noOrganizationExpenses": "No organization expenses",
   "noOrganizationExpensesMessage": "Expenses data is under processing now. OptScale will show it once it is available.",
   "noOrganizations": "No organizations",
-  "noOwners": "No owners",
+  "noOwnerExpenses": "No owner expenses",
+  "noOwners": "No owner",
   "noPendingInvitationsLeft": "No pending invitations left",
   "noPerspectives": "No perspectives",
   "noPolicies": "No policies",
   "noPolicyViolations": "No policy violations",
+  "noPoolExpenses": "No pool expenses",
   "noPoolPolicies": "No pool policies",
   "noPools": "No pools",
   "noPorts": "There are no ports added",
@@ -1438,11 +1441,11 @@
   "noRecommendationsFound": "No recommendations found",
   "noRecommendationsInACategory": "There are currently no recommendations available in this category.",
   "noRegionExpenses": "No region expenses",
-  "noRegions": "No regions",
   "noRelevantSizes": "No relevant sizes",
   "noReservationsForExecutors": "No reservations for executors",
   "noReservedInstances": "No Reserved Instances",
   "noResourceConstraints": "No resource constraints",
+  "noResourceTypeExpenses": "No resource type expenses",
   "noResourceTypes": "No resource types",
   "noResources": "No resources",
   "noRestrictions": "No restrictions",
@@ -1453,6 +1456,7 @@
   "noRunsetTemplates": "No runset templates",
   "noRunsets": "No runsets",
   "noSGOpened": "No opened Security Groups",
+  "noServiceExpenses": "No service expenses",
   "noServices": "No services",
   "noSets": "No sets",
   "noSpotPreemptibleOnstancesUsage": "No Spot/Preemptible instance usages",
@@ -2139,7 +2143,7 @@
   "suggestedFilters": "Suggested filters",
   "sum": "Sum",
   "summary": "Summary",
-  "summaryBy": "Summary by {name, select,\n cloud {data source}\n pool {pool}\n owner {Owner}\n region {region}\n service {service}\n resourceType {resource type}\n node {node}\n namespace {namespace}\n other {entity}}",
+  "summaryBy": "Summary by {name, select,\n cloud {data source}\n pool {pool}\n owner {owner}\n region {region}\n service {service}\n resourceType {resource type}\n node {node}\n namespace {namespace}\n other {entity}}",
   "summarySavings": "Summary savings",
   "sureDeletePool": "Are you sure you want to delete this pool?",
   "sureDeleteRoleAssignment": "Are you sure you want to delete this role assignment?",
