OS-8093. Rename "With available savings" to "With recommendations"

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -2401,7 +2401,7 @@
   "wholeOrganization": "Whole organization",
   "willGetFollowingRoles": "You will get the following roles in the organization:",
   "windowsPrice": "Windows price",
-  "withAvailableSavings": "With available savings",
+  "withRecommendations": "With recommendations",
   "withSubPools": "With sub-pools",
   "withViolatedConstraints": "With violated constraints",
   "withoutTag": "Without tag",
