OS-566. Add OptScale mode selection on org creation

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -134,7 +134,7 @@
   "applicationsTitle": "Applications",
   "appliedFilters": "Applied filters",
   "apply": "Apply",
-  "applyOptscaleModeError": "At least one mode must be enabled",
+  "applyOptscaleCapabilityError": "At least one capability must be enabled",
   "approverName": "Approver name",
   "arcee": "Arcee",
   "archivationReason.dataSourceHasBeenDeleted": "Data source has been deleted",
@@ -241,7 +241,20 @@
   "candidateMustCoverDatasetsWithLabels": "Candidate must cover the last X datasets with the specified dataset label",
   "candidateMustCoverFollowingDatasets": "Candidate must cover the following datasets",
   "candidateMustFollowMetricRestrictions": "Candidate must fit the following metric restrictions",
+  "capabilities": "Capabilities",
   "capabilitiesQuestion": "What capabilities does the product lack?",
+  "capability.finops.1": "cloud cost optimization",
+  "capability.finops.2": "cost allocation",
+  "capability.finops.3": "anomaly detection",
+  "capability.finops.4": "object storage duplicate finder",
+  "capability.finops.5": "Reserved Instances and Saving Plans optimization",
+  "capability.finops.6": "...and more cloud cost related capabilities",
+  "capability.mlops.1": "ML Leaderboards",
+  "capability.mlops.2": "experiment tracking",
+  "capability.mlops.3": "model and dataset versioning",
+  "capability.mlops.4": "performance optimization",
+  "capability.mlops.5": "ML task tracking",
+  "capability.mlops.6": "ML/AI R&D cost optimization (requires enabled FinOps)",
   "cards": "Cards",
   "categories": "Categories",
   "categorizeBy": "Categorize by",
@@ -413,6 +426,7 @@
   "createNebiusDescription.provideCredentialsForServiceAccount": "Please provide your service account credentials with the following roles: <strong>resource-manager.viewer</strong>, <strong>compute.viewer</strong>, <strong>storage.viewer</strong>, <strong>storage.configViewer</strong>, <strong>vpc.viewer</strong>, <strong>managed-mongodb.viewer</strong>, <strong>managed-postgresql.viewer</strong>, <strong>managed-mysql.viewer</strong>, <strong>managed-clickhouse.viewer</strong>, <strong>iam.viewer</strong>, <strong>monitoring.viewer</strong>.",
   "createNewCostUsageReport": "Create new Data Export",
   "createNewOrganization": "Create new organization",
+  "createNewOrganizationCapabilitiesDescription": "Select the capabilities you want to enable for your organization. You can choose MLOps for machine learning operations, FinOps for cloud cost management, or both. The capability can be changed in Settings.",
   "createNewOrganizationDescription": "Please give a name to your new organization. You will obtain an organization manager role in the newly created organization and be able to invite other team members.",
   "createNewOrganizationTitle": "Create New Organization",
   "createOrganization": "Create organization",
@@ -1275,19 +1289,6 @@
   "mlTasksDescription": "A list of profiled tasks, including their status, goals, expenses, and output metrics from the most recent run. Add any new ML/AI or regular task that you wish to profile.",
   "mlai": "ML/AI",
   "mlops": "MLOps",
-  "mode": "Mode",
-  "mode.finops.1": "cloud cost optimization",
-  "mode.finops.2": "cost allocation",
-  "mode.finops.3": "anomaly detection",
-  "mode.finops.4": "object storage duplicate finder",
-  "mode.finops.5": "Reserved Instances and Saving Plans optimization",
-  "mode.finops.6": "...and more cloud cost related capabilities",
-  "mode.mlops.1": "ML Leaderboards",
-  "mode.mlops.2": "experiment tracking",
-  "mode.mlops.3": "model and dataset versioning",
-  "mode.mlops.4": "performance optimization",
-  "mode.mlops.5": "ML task tracking",
-  "mode.mlops.6": "ML/AI R&D cost optimization (requires enabled FinOps)",
   "model": "Model",
   "modelVersions": "Model versions",
   "models": "Models",
@@ -1660,6 +1661,7 @@
   "proceedToFinopsWebsite": "Proceed to Finops website",
   "proceedToLiveDemo": "Proceed to live demo",
   "proceedToOptScale": "Proceed to OptScale",
+  "proceedToOptscale": "Proceed to OptScale",
   "processCPU": "Process CPU",
   "processRAM": "Process RAM",
   "productTour": "Product tour",
@@ -2398,6 +2400,7 @@
   "weekend": "Weekend",
   "weekly": "Weekly",
   "weeklyExpenses": "Weekly expenses",
+  "whichOptscaleCapabilitiesAreYouLookingFor": "Which OptScale capabilities are you looking for?",
   "wholeNumber": "This field must be a whole number",
   "wholeNumberOrNoLimit": "This field must be a whole number or no limit",
   "wholeOrganization": "Whole organization",
@@ -2438,6 +2441,8 @@
   "you": "You",
   "youAreAboutToRemoveDefaultSsh": "You are about to remove default SSH key.",
   "youAreOnlyOrganizationManager": "You are the only organization manager. Please <link>invite</link> another organization manager before self-deletion.",
+  "youCanChangeCapabilityInSettings": "You can change the capability in Settings.",
+  "youCanChangeThisSettingLater": "You can change this setting later",
   "youDoNotHaveEnoughPermissions": "You do not have enough permissions.",
   "youDontHaveAnyAutomaticAssignmentRulesCreatedYet": "You do not have any automatic assignment rules created yet.",
   "youDontHaveAnyEnvironmentsCreatedYet": "You do not have any Shared Environments created yet.",
