OSN-568. Refactor InitializeContainer and SetupOrganization components to improve loading states and organization creation flow
- Introduced a new Title component for consistent title rendering.
- Updated loading state handling in InitializeContainer to reflect organization fetching status.
- Enhanced SetupOrganization to manage organization creation with improved error handling and loading indicators.
- Added new translation keys for organization creation messages.

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -442,6 +442,7 @@
   "created": "Created",
   "createdAt": "Created at",
   "creatingAuthorizedKeys": "Creating authorized keys",
+  "creatingOrganization": "Creating organization...",
   "creatingStaticAccessKeys": "Creating static access keys",
   "critical": "Critical",
   "criticalDuplicatesSavingThresholdDescription": "Savings equal to or greater than the threshold will be considered as critical (red).",
@@ -1545,6 +1546,7 @@
   "optscale.welcome.caption6": "Runsets to run experiments in parallel",
   "or": "or",
   "organization": "Organization",
+  "organizationCreationFailed": "Failed to create an organization.{br}Please sign in again, and if the problem persists, contact our Support Team at {email}.",
   "organizationCurrencyDescription": "Currency used in this organization. You can connect only data sources with the organization's currency. This setting can't be changed if the organization has at least one connected data source.",
   "organizationEngineer": "Organization engineer",
   "organizationExpenses": "Organization expenses",
