OS-5417. Update perspectives link on the Dashboard page
* Refactor DashedTypography component to use forwardRef and extend TypographyProps;
* Update TopResourcesExpensesCard to improve perspective menu item handling and tooltip integration;
* Correct translation keys for consistency in capitalization.

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -1967,7 +1967,7 @@
   "securityGroup": "Security group",
   "securityGroupProtocolPortApp": "{port}/{protocol} ({app})",
   "seeAllItems": "See {value, plural,\n  =1 {item}\n  other {all {value} items}\n}",
-  "seeAllPerspectives": "See all perspectives",
+  "seeAllPerspectives": "See all Perspectives",
   "seeAllRecommendations": "See all recommendations",
   "seeBIExports": "See Business Intelligence exports",
   "seeDetails": "See details",
@@ -1975,14 +1975,13 @@
   "seeExpensesBreakdownBy": "See expenses breakdown by",
   "seeExpensesByRegion": "See expenses by region",
   "seeInCostExplorer": "See in cost explorer",
-  "seePerspectives": "See perspectives",
   "seeResourceConstraints": "See resource constraints",
   "seeResourceList": "See resources list",
   "seeResources": "See resources",
   "seeRiSpCoverage": "See RI/SP Coverage",
   "seeRuns": "See runs",
   "selectAll": "Select all",
-  "selectAndApplyPerspective": "Select and apply one of the following perspectives to see a saved view. {seeAllPerspectivesLink}.",
+  "selectAndApplyPerspective": "Select and apply one of the following Perspectives to see a saved view. {seeAllPerspectivesLink}.",
   "selectFileToUpload": "Please select a file to upload.",
   "selectNewUserThatWillTakeOverAllAssets": "Select a new user that will take over all the assets of {userName}.",
   "selectRange": "Select range",
@@ -2386,6 +2385,8 @@
   "version": "Version",
   "versions": "Versions",
   "view": "View",
+  "viewAllPerspectivesTooltip": "Select a Perspective to view filtered resources on the Resources page.",
+  "viewInPerspectives": "View in Perspectives",
   "violatedAt": "Violated at",
   "violatedOrganizationConstraints": "{count} violated organization {count, plural,\n  =0 {constraints}\n  =1 {constraint}\n  other {constraints}\n}",
   "violatedResourceConstraints": "{count} violated resource {count, plural,\n  =0 {constraints}\n  =1 {constraint}\n  other {constraints}\n}",
