OSN-7. Add legend for resource charts

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -2051,6 +2051,7 @@
   "showDirectionsWithExpenses": "Show directions with expenses <{value}",
   "showEmpty": "Show empty",
   "showExpensesAs": "Show expenses as",
+  "showLegend": "Show legend",
   "showLess": "Show less",
   "showMilestones": "Show milestones",
   "showMore": "Show more",
