OSN-585. Implement long name truncation with tooltips across components

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -1884,8 +1884,8 @@
   "rightsizingThresholdMinValue": "The limit must more or equal to 0",
   "role": "Role",
   "roleAt": "{role} at",
-  "roleAtPool": "<strong>{role}</strong> at <strong>{pool}</strong> pool",
-  "roleOfOrganization": "<strong>{role}</strong> of <strong>{organization}</strong> organization",
+  "roleAtPool": "<strong>{role}</strong> at <strong>{target}</strong> pool",
+  "roleOfOrganization": "<strong>{role}</strong> of <strong>{target}</strong> organization",
   "roles": "Roles",
   "root": "Root",
   "rowsLimitWarning": "The number of displayed {entities} is limited to {count}. Adjust the filters to narrow down the results.",
