OSN-619. Add max spot cost per hour configuration for runset

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -1114,6 +1114,7 @@
   "maxAttempts": "Max attempts",
   "maxAttemptsTooltip": "Number of attempts to use Spot instance before switching back to Pay-as-you-Go",
   "maxBudgetStopCondition": "Stop runset when projected expenses exceed {value}",
+  "maxCostPerHour": "Max cost (per hour)",
   "maxCpu": "Max CPU",
   "maxDurationStopCondition": "Stop individual run if its duration exceeds {value}",
   "maxFieldLength": "This field must be maximum {max} {max, plural,\n  =1 {character}\n  other {characters}\n} long",
@@ -2101,6 +2102,7 @@
   "spendsUpToDate": "Spends up-to-date",
   "spentOverLimit": "Spent over limit",
   "spotInstances": "Spot instances",
+  "spotInstancesMaxCostPerHour": "Spot instances max cost (per hour)",
   "spotInstancesTooltip": "Region is recommended to run Spot instances based on a high capacity rating",
   "spotPreemptibleInstancesUsage": "Spot/Preemptible instances usage",
   "spotPreemptibleInstancesUsageDescription": "Recent runs of this task used short-living instances which can be created as Spot/Preemptible instances.",
