OSN-576. Enhance Apollo error handling and improve user navigation
- Added support for displaying custom Apollo error messages in ApolloApiErrorAlert component.
- Refactored LoginNavigation to construct URLs more efficiently, ensuring proper query parameter handling.
- Enhanced InitializeContainer and SetupOrganization components to provide clearer error messages and support contact options.
- Updated translations to include new error messages for improved user feedback.
- Fixed issue with infinite navigation loop when trying to open the /login page with existing token

--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -118,6 +118,7 @@
   "always": "Always",
   "amazonS3": "Amazon S3",
   "amount": "Amount",
+  "anIssueOccurredDuringTheInitializationProcess": "An issue occurred during the initialization process.",
   "anomaly": "Anomaly",
   "anomalyDetectionPolicyBackdropMessage": "To get real data, please add an anomaly detection policy.",
   "anomalyDetectionPolicyContactManagerBackdropMessage": "Please contact your organization manager to add an anomaly detection policy.",
@@ -1547,7 +1548,7 @@
   "optscale.welcome.caption6": "Runsets to run experiments in parallel",
   "or": "or",
   "organization": "Organization",
-  "organizationCreationFailed": "Failed to create an organization.{br}Please sign in again, and if the problem persists, contact our Support Team at {email}.",
+  "organizationCreationFailed": "Failed to create an organization.",
   "organizationCurrencyDescription": "Currency used in this organization. You can connect only data sources with the organization's currency. This setting can't be changed if the organization has at least one connected data source.",
   "organizationEngineer": "Organization engineer",
   "organizationExpenses": "Organization expenses",
@@ -1605,6 +1606,7 @@
   "pleaseEnterShellCommands": "Please enter shell commands",
   "pleaseEnterVerificationCodeSentTo": "Please enter the verification code sent to:",
   "pleaseSignIn": "Please sign in.",
+  "pleaseSignInAgainAndIfTheProblemPersists": "Please sign in again, and if the problem persists, contact our Support Team at {email}.",
   "pleaseUseTheFollowingEnvCollectorUrl": "Please use the following ENV_COLLECTOR_URL in your automation to set properties of this Shared Environment:",
   "pluralHoursValue": "{value, plural,\n  =0 {hours}\n  =1 { hour}\n other { hours}\n}",
   "policies": "Policies",
