--- a/ngui/ui/src/translations/en-US/app.json
+++ b/ngui/ui/src/translations/en-US/app.json
@@ -784,7 +784,8 @@
   "externalAndOtherClouds": "external and other clouds",
   "externalMarker": "External and other clouds",
   "failed": "Failed",
-  "failedLiveDemoMessage": "OptScale could not prepare your live demo experience. Please retry.",
+  "failedLiveDemoMessage": "OptScale could not prepare your live demo experience.",
+  "failedLiveDemoMessageTryAgain": "Please try again, and if the problem persists, contact our Support Team at {email}.",
   "failedStatusDescription": "<strong>Failed</strong>: indicates that something went wrong for the run, and it was not able to complete successfully.",
   "featureComingSoon": "{feature} will be integrated into OptScale soon.",
   "featureLinkMessage": "You can use Hystax Acura now to {action} your workloads. For more details please visit <link>this page</link> or select a target cloud below.",
@@ -1605,6 +1606,7 @@
   "pleaseContactSupport": "Please <supportEmail>contact support</supportEmail>.",
   "pleaseEnterShellCommands": "Please enter shell commands",
   "pleaseEnterVerificationCodeSentTo": "Please enter the verification code sent to:",
+  "pleaseGenerateLiveDemoAgainAndIfTheProblemPersists": "Please generate the live demo again, and if the problem persists, contact our Support Team at {email}.",
   "pleaseSignIn": "Please sign in.",
   "pleaseSignInAgainAndIfTheProblemPersists": "Please sign in again, and if the problem persists, contact our Support Team at {email}.",
   "pleaseUseTheFollowingEnvCollectorUrl": "Please use the following ENV_COLLECTOR_URL in your automation to set properties of this Shared Environment:",
